// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifExpertApp /> Debe de mostrar el componente correctamente 1`] = `
<div
  className="gif-expert-app"
>
  <div
    className="main-title"
  >
    <Imagen />
    <h2>
      GifExpertApp
    </h2>
    <Imagen />
  </div>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</div>
`;

exports[`Pruebas en <GifExpertApp /> Debe de mostrar una lista de categorias 1`] = `
<div
  className="gif-expert-app"
>
  <div
    className="main-title"
  >
    <Imagen />
    <h2>
      GifExpertApp
    </h2>
    <Imagen />
  </div>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch"
    />
    <GifGrid
      category="Dragon Ball"
      key="Dragon Ball"
    />
    <GifGrid
      category="Black Clover"
      key="Black Clover"
    />
  </ol>
</div>
`;
